--- a/src/components/main.css
+++ b/src/components/main.css
@@ -18,11 +18,37 @@ nav.navbar > .link:hover{
     color: #A5C9CA;
 }
 
-div.clock, .navbar, div.date {
+div.clock, .navbar, div.date, footer {
     padding: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+div.arrows, div.timer, div.values, div.stop {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+div.arrows > .hour, .minute, .second {
+    margin: 0 7.3rem;
+}
+
+div.arrows > .hour > .down:hover, .minute > .down:hover, .second > .down:hover {
+    color: red
+}
+
+div.arrows > .hour > .up:hover, .minute > .up:hover, .second > .up:hover {
+    color: green
+}
+
+div.timer {
+    margin-top: 5rem;
+}
+
+div.stop {
+    margin: 3rem 0;
 }
 
 .navbar {
@@ -30,10 +56,24 @@ div.clock, .navbar, div.date {
     font-size: 1.5rem;
 }
 
-div.clock {
+div.clock, div.values {
     font-size: 15rem;
 }
 
 div.date {
     font-size: 5rem;
+}
+
+footer {
+    margin-top: 2rem;
+    font-size: 1rem;
+}
+
+footer > div > a {
+    text-decoration: none;
+    color: inherit;
+}
+
+footer > div > a:hover {
+    color: #A5C9CA;
 }
