--- a/src/components/main.css
+++ b/src/components/main.css
@@ -25,7 +25,7 @@ div.clock, .navbar, div.date, footer {
     justify-content: center;
 }
 
-div.arrows, div.timer, div.values, div.buttons {
+div.arrows, div.timer, div.values, div.buttons, div.list {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -35,12 +35,16 @@ div.arrows > .hour, .minute, .second {
     margin: 0 7.3rem;
 }
 
+div.list{
+    background-color: inherit;
+}
+
 div.arrows > .hour > .down:hover, .minute > .down:hover, .second > .down:hover {
     color: red
 }
 
-div.buttons .button {
-    margin: 0, 2rem;
+div.button {
+    margin: 0 2rem;
 }
 
 div.arrows > .hour > .up:hover, .minute > .up:hover, .second > .up:hover {
